[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
lazy_static = "1.4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.19.1"
chrono = "0.4.35"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
postgres = "0.19.10"
