[package]
name = "grepper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
base64 = "0.22.1"
lazy_static = "1.4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.19.1"
derive_more = { version = "1", features = ["full"] }
select = "0.6.0"
